# spyder-themeweaver

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  debug_qrc.py  debug_qrc2.py  pyproject.toml  svgo.config.js
docs/: THEME_GENERATOR.md
scripts/: README.md  generate_example_theme.py  inkscape-label2id.py  inspect_theme_objects.py  label2id.py  theme_preview.py
scripts/preview/: async_theme_loader.py  color_tab.py  main.py  main_window.py  paths.py  syntax_tab.py  theme_cache.py  theme_loader.py  ui_components.py  ui_panels.py  ui_tabs.py
src/themeweaver/: README.md  __init__.py  cli.py  colorsystem.py  colorsystem.yaml  palette.py  test_color-utils.py  theme.py
src/themeweaver/cli/: __init__.py  __main__.py  error_handling.py  utils.py
src/themeweaver/cli/commands/: __init__.py  color_analysis.py  color_generation.py  color_gradient.py  color_interpolation.py  contrast_validation.py  theme_export.py  theme_generation.py  theme_management.py  theme_package.py
src/themeweaver/color_utils/: README.md  __init__.py  analyze_palette.py  color_analysis.py  color_generation.py  color_names.py  color_utils.py  common_palettes.py  common_palettes.yaml  famous_palettes.py  generate_groups.py  interpolate_colors.py  interpolation_analysis.py  interpolation_methods.py  mappings_template.py  palette_generators.py  palette_loaders.py  semantic_mappings_template.py  spyder_template.py  theme_generator_utils.py
src/themeweaver/contrast/: __init__.py  color_resolver.py  rules_dark.yaml  rules_light.yaml  rules_loader.py  validator.py
src/themeweaver/core/: assets.py  colorsystem.py  exporter.py  palette.py  palette_comments.py  palette_generator.py  qdarkstyle_exporter.py  spyder_generator.py  spyder_package_exporter.py  syntax_schema.py  theme.py  theme_exporter.py  theme_generator.py  theme_packager.py  theme_utils.py  yaml_loader.py  yaml_theme_loader.py
src/themeweaver/themes/_test3/: colorsystem.yaml  mappings.yaml  theme.yaml
src/themeweaver/themes/catppuccin-mocha/: colorsystem.yaml  mappings.yaml  theme.yaml
src/themeweaver/themes/dracula/: colorsystem.yaml  mappings.yaml  theme.yaml
src/themeweaver/themes/gruvbox/: colorsystem.yaml  mappings.yaml  theme.yaml
src/themeweaver/themes/idle/: colorsystem.yaml  mappings.yaml  theme.yaml
src/themeweaver/themes/inkpot/: colorsystem.yaml  mappings.yaml  theme.yaml
src/themeweaver/themes/monokai/: colorsystem.yaml  mappings.yaml  theme.yaml
src/themeweaver/themes/notepad++/: colorsystem.yaml  mappings.yaml  theme.yaml
src/themeweaver/themes/obsidian/: colorsystem.yaml  mappings.yaml  theme.yaml
src/themeweaver/themes/ocean_blue/: colorsystem.yaml  mappings.yaml  theme.yaml
src/themeweaver/themes/qdarkstyle/: colorsystem.yaml  mappings.yaml  theme.yaml
src/themeweaver/themes/rainbow_uniform/: colorsystem.yaml  mappings.yaml  theme.yaml
src/themeweaver/themes/solarized/: colorsystem.yaml  mappings.yaml  theme.yaml
src/themeweaver/themes/spyder/: colorsystem.yaml  theme.yaml
src/themeweaver/themes/sunset_warm/: colorsystem.yaml  mappings.yaml  theme.yaml
src/themeweaver/themes/test-theme/: colorsystem.yaml  mappings.yaml  theme.yaml
src/themeweaver/themes/zenburn/: colorsystem.yaml  mappings.yaml  theme.yaml
tests/: README.md  TEST_IMPROVEMENT_PLAN.md  cli_invoke.py  inspect_theme_objects.py  test_cli.py  test_cli_scripts.py  test_color_classes.py  test_color_darkness.py  test_color_generation_command.py  test_color_generation_utils.py  test_color_gradient_command.py  test_color_interpolation_command.py  test_color_names.py  test_color_utils.py  test_colorsystem.py  test_contrast_rules_loader.py  test_contrast_validation_command.py  test_contrast_validator.py  test_contrast_validator_extra.py  test_error_handling.py  test_exporter.py  test_gamut_handling.py  test_interpolation_analysis.py  test_interpolation_methods.py  test_palette_integration.py  test_palette_loaders.py  test_palette_loaders_extra.py  test_semantic_mappings.py  test_spyder_package_exporter.py  test_syntax_schema.py  test_theme_export_command.py  test_theme_generation_command.py  test_theme_generator.py  test_theme_generator_utils_extra.py  test_theme_management_command.py  test_theme_package_command.py  test_theme_packager.py  test_theme_utils.py  test_yaml_loading.py  test_yaml_theme_loader.py
theme-definitions/: README.md  idle.yaml  inkpot.yaml  zenburn.yaml
theme-generation-seeds/: README.md  catppuccin-mocha.yaml  dracula.yaml  gruvbox.yaml  monokai.yaml  notepad++.yaml  obsidian.yaml
themes/brutalism/: colorsystem.yaml  mappings.yaml  theme.yaml
themes/catppuccin-mocha/: colorsystem.yaml  mappings.yaml  theme.yaml
themes/dracula/: colorsystem.yaml  mappings.yaml
themes/gruvbox/: colorsystem.yaml  mappings.yaml
themes/idle/: colorsystem.yaml  mappings.yaml  theme.yaml
themes/inkpot/: colorsystem.yaml  mappings.yaml
themes/miami-nights/: colorsystem.yaml  mappings.yaml  theme.yaml
themes/monokai/: colorsystem.yaml  mappings.yaml
themes/notepad++/: colorsystem.yaml  mappings.yaml
themes/obsidian/: colorsystem.yaml  mappings.yaml  theme.yaml
themes/solarized/: colorsystem.yaml  mappings.yaml
themes/spyder/: colorsystem.yaml  mappings.yaml
themes/zenburn/: colorsystem.yaml  mappings.yaml  theme.yaml
