[project]
authors = [{name = "Andrés Conrado Montoya Acosta (@conradolandia)", email = "andresconrado@gmail.com"}]
dependencies = []
name = "themeweaver"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
themeweaver = { path = ".", editable = true }
qdarkstyle = { path = "/home/andi/Dev/Spyder/QDarkStyleSheet", editable = true }

[tool.pixi.tasks]
lint = "ruff check . --exclude .pixi,.venv,.git,.pytest_cache,.ruff_cache,.mypy_cache,.vscode"
format = "ruff format . --exclude .pixi,.venv,.git,.pytest_cache,.ruff_cache,.mypy_cache,.vscode"
lint-fix = "ruff check --fix . --exclude .pixi,.venv,.git,.pytest_cache,.ruff_cache,.mypy_cache,.vscode"
check = { depends-on = ["lint"] }
cli = "pixi run python -m themeweaver.cli"
build = "pixi run export-all"
export = "python -m themeweaver.cli export --theme"
export-light = "python -m themeweaver.cli export --variants light --theme"
export-dark = "python -m themeweaver.cli export --variants dark --theme"
export-all = "python -m themeweaver.cli export --all"
list-themes = "python -m themeweaver.cli list"
theme-info = "python -m themeweaver.cli info"
generate = "python -m themeweaver.cli generate"
validate = "python -m themeweaver.cli validate"
interpolate = "python -m themeweaver.cli interpolate $START_COLOR $END_COLOR $STEPS"
interpolate-lch = "python -m themeweaver.cli interpolate $START_COLOR $END_COLOR $STEPS --method lch"
interpolate-hsv = "python -m themeweaver.cli interpolate $START_COLOR $END_COLOR $STEPS --method hsv"
palette = "python -m themeweaver.cli palette"
preview = "python -m scripts.preview.main"
pre-commit-install = "pre-commit install"
pre-commit-run = "pre-commit run --all-files"
pre-commit-update = "pre-commit autoupdate"
test = "pytest tests"
test-cov = "pytest tests --cov=src/themeweaver --cov-report=html --cov-report=term"

[tool.pixi.dependencies]
python = "3.12.*"
colorspacious = ">=1.1.2,<2"
ruff = ">=0.11.13,<0.12"
pyyaml = ">=6.0.2,<7"
pytest = ">=8.4.0,<9"
pytest-cov = ">=6.0.0,<7"
pyqt = ">=5.15.11,<6"
qtpy = ">=2.4.3,<3"
qtsass = ">=0.4.0,<0.5"
randomname = ">=0.2.1,<0.3"
pyside6 = ">=6.9.1,<7"
pre-commit = ">=3.6.0,<4"
